Implemented working login and registration
