# backend/src/main/java/org/ukma/spring/crooodle/controller/AuthController.java
@@ -1,6 +1,10 @@
 package org.ukma.spring.crooodle.controller;
 
 import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.media.Content;
+import io.swagger.v3.oas.annotations.media.Schema;
+import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -8,6 +12,8 @@ import org.springframework.web.bind.annotation.*;
 import org.ukma.spring.crooodle.dto.AccessTokenResponseDto;
 import org.ukma.spring.crooodle.dto.UserLoginRequestDto;
 import org.ukma.spring.crooodle.dto.UserRegisterRequestDto;
+import org.ukma.spring.crooodle.dto.common.PublicErrorDto;
+import org.ukma.spring.crooodle.dto.common.PublicValidationErrorDto;
 import org.ukma.spring.crooodle.service.AuthService;
 
 @RestController
@@ -16,6 +22,35 @@ import org.ukma.spring.crooodle.service.AuthService;
 public class AuthController {
     private final AuthService service;
 
+    @ApiResponses(value = {
+        @ApiResponse(
+            responseCode = "200",
+            description = "Ok",
+            content = {
+                @Content(mediaType = "application/json",
+                    schema = @Schema(implementation = AccessTokenResponseDto.class)
+                )
+            }
+        ),
+        @ApiResponse(
+            responseCode = "400",
+            description = "Bad Request",
+            content = {
+                @Content(mediaType = "application/json",
+                    schema = @Schema(implementation = PublicValidationErrorDto.class)
+                )
+            }
+        ),
+        @ApiResponse(
+            responseCode = "500",
+            description = "Internal server error",
+            content = {
+                @Content(mediaType = "application/json",
+                    schema = @Schema(implementation = PublicErrorDto.class)
+                )
+            }
+        )
+    })
     @Operation(operationId = "register")
     @PreAuthorize("permitAll()")
     @PostMapping("/register")
